--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.1.2"
+    "@contentful/rich-text-html-renderer": "^16.3.0",
+    "astro": "^4.1.2",
+    "contentful": "^10.6.16"
   }
 }
